Update to address nowrap issue on button.  Prior selector was not specific enough

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -24,8 +24,8 @@ body {
     border-radius: 8px;
     background-color: $primaryColor;
     color: #fff;
-    white-space: normal !important; // Temp fix for button wrapping caused by inline "nowrap" value.
     cursor: pointer;
+
     &:hover {
       background-color: darken($primaryColor, 10);
     }
@@ -37,6 +37,9 @@ body {
       background-color: #ddd;
       color: #bbb;
       cursor: not-allowed;
+    }
+    div {
+      white-space: normal !important; // Temp fix for button wrapping caused by inline "nowrap" value.
     }
   }
   .from-user.avatar {
